[metadata]
name = scraibe
version = attr: scraibe.__version__
author = Jacob Schmieder
author_email = Jacob.Schmieder@dbfz.de
description = My package description
long_description = file: README.md, LICENSE
platforms = Linux
keywords = transcription speech recognition whisper pyannote audio speech-to-text speech-to-text transcription speech-to-text recognition voice-to-speech
license = GPL-3.0
classifiers =
    Development Status :: 3 - Alpha
    Environment :: GPU :: NVIDIA CUDA :: 11.2
    License :: OSI Approved :: Open Software License 3.0 (OSL-3.0)
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.7
install_requires =
    requests
    importlib-metadata; python_version<"3.8"

[options.entry_points]
console_scripts =
    executable-name = scraibe.cli:cli